# ai-workflows

./: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
dags/inventory/: instance_generation.py
src/folio_ai_workflows/dags/inventory/: instance_embedding.py  instance_generation.py
src/folio_ai_workflows/inventory/: instance.py
src/folio_ai_workflows/plugins/inventory/: instance.py
